# python-cheat-sheet

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
anaconda/: __init__.py  python_doc.py  utils.py  utils_test.py  views.py
anaconda/static/: pygments.css
anaconda/templates/: functions.md  index.html  index.md  layout.html  overview.md  page.html  syntax.md
anaconda/templates/mocks/: markdown_template.md
anaconda/templates/page/: navigation.html
anaconda/templates/python_doc/: flask.md  functions.md  overview.md  syntax.md
anaconda/utils/: __init__.py  html_utils.py  html_utils_test.py  markdown_utils_test.py  render_utils.py  render_utils_test.py  string_utils_test.py
