[project]
name = "anaconda"
dependencies = [
    "flask >=3.0,<4",
    "beautifulsoup4 >=4.12,<5",
    "markdown >=3.6,<4",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pycodestyle >=2.11,<3",
    "pytest >=8.1,<9",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
